@@ -1,10 +1,11 @@
 v. 0.17.21
 - add green algae to solid alginic acid
 - fix higher tier bobextended underground belt don't unlock
-- balanced bobextended electronics recipe 
-- balanced clay coke recipe
+- adjust bobextended electronics recipe 
+- adjust clay coke recipe
 - add battery to some science
 - add evolution nullifier
+- add recipe cellulose fiber from wood plup
 
 v. 0.17.20
 - decrease overall cost in harder logistic
